--- a/src/20200526-v8垃圾回收-安全-浏览器.md
+++ b/src/20200526-v8垃圾回收-安全-浏览器.md
@@ -108,18 +108,47 @@
     - 会话劫持：在一次正常通信过程中，攻击者作为第三方参与其中，或者在数据中加入其他信息，将双方的通信模式暗中改变，从直接联系变成有攻击者参与的联系。
 
 2、预防措施：
-    - xss：转义字符过滤html代码
-        ```javascript
-        const escapeHTML = value => {
-            if (!value || !value.length) {
-                return value;
-            }
-            return value
-                .replace(/&/g, "&amp;")
-                .replace(/</g, "&lt;")
-                .replace(/>/g, "&gt;")
-                .replace(/"/g, "&quot;")
-                .replace(/'/g, "&#39;");
-            };
+- xss：
+  - 转义字符过滤html代码
+    ```javascript
+    const escapeHTML = value => {
+        if (!value || !value.length) {
+            return value;
+        }
+        return value
+            .replace(/&/g, "&amp;")
+            .replace(/</g, "&lt;")
+            .replace(/>/g, "&gt;")
+            .replace(/"/g, "&quot;")
+            .replace(/'/g, "&#39;");
+        };
     ```
+  - 过滤sql代码
+    ```
+    const replaceSql = value => {
+    if (!value || !value.length) {
+        return value;
+    }
+    return value.replace(/select|update|delete|exec|count|'|"|=|;|>|<|%/gi, "");
+    };
+    ```
+- csrf:
+    - 验证http referer字段(引用来源，告诉服务器网页是从哪里来的)
+    - 请求地址中添加token并验证
+    - 在http头中自定义属性并验证
+    - get请求不对数据进行修改（GET HTTP请求不应该改变状态，它们应该是幂等的。幂等性意味着发出一次请求或多次发出请求会得到相同的结果。即没有副作用）
+    - 接口防跨域处理
+    - 不让第三方网站访问用户cookie（same-site）
+- 预防中间人攻击
+    - dns欺骗：检查本机hosts文件
+    - 会话劫持：使用交换式网络代替共享式网络，还必须使用静态arp（地址解析协议），捆绑mac+ip等方式限制欺骗，以及采用认证方式的连接等
+- 内容安全策略（csp）
+    内容安全策略是一个额外的安全层，用于检测并削弱某些特定类型的攻击，包括跨站脚本xss和数据注入攻击等，这些攻击是主要的手段。
+    > <meta http-equiv="Content-Security-Policy">
 
+    > HTTP Header 中的 Content-Security-Policy
+
+#### 浏览器相关 ####
+- dns预解析
+- 强缓存
+![缓存机制](https://github.com/feng842268973/note/tree/master/src/images/缓存.jpg)
