--- a/src/20200526-v8垃圾回收-安全-浏览器.md
+++ b/src/20200526-v8垃圾回收-安全-浏览器.md
@@ -151,4 +151,4 @@
 #### 浏览器相关 ####
 - dns预解析
 - 强缓存
-![缓存机制](https://github.com/feng842268973/note/tree/master/src/images/缓存.jpg)
+![缓存机制](https://github.com/feng842268973/note/tree/master/src/images/cache.jpg)
