--- a/src/20200525-v8垃圾回收-安全-浏览器.md
+++ b/src/20200525-v8垃圾回收-安全-浏览器.md
@@ -149,6 +149,13 @@
     > HTTP Header 中的 Content-Security-Policy
 
 #### 浏览器相关 ####
+![缓存机制](https://github.com/feng842268973/note/tree/master/src/images/cache.jpg)
 - dns预解析
 - 强缓存
-![缓存机制](https://github.com/feng842268973/note/tree/master/src/images/cache.jpg)
+  -expires  
+    - 缓存过期时间，用来指定资源到期时间，是服务器的具体的时间点
+    - expires是http/1产物，受限于本地时间，如果修改本地时间，可能造成缓存失效。
+  - cache-Control
+- 协商缓存：
+>协商缓存就是强制缓存失效后，浏览器携带缓存标识想服务器发起请求，服务器根据标识决定是否使用缓存。
+
