--- a/src/20200526-.md
+++ b/src/20200526-.md
@@ -2,12 +2,10 @@
 - 数字字符串的比较，会先将其转换成数字，在比较
     '1'<'3'
 - 纯字符串比较，先转换成ascii码，逐位依次比较，有一位分出大小即停止 ('a'.charCodeAt())
-    'ac'<'ab' 'ac'>'d' 'ac'<'ace'
+    'ac'>'ab' 'ac'<'d' 'ac'<'ace'
 - 汉字比较，转换成ascii码，再比较。('我'.charCodeAt())
 - 数字和字符串比较，且字符串位数字，将数字字符串转换为数字再比较
 - 数字和字符串比较，字符串为非纯数字，非纯字符串转成数字的时候回编程NaN，NaN和数字比较时不论大小会返回false
 
 #### git操作 ####
 >git是不同于cvs和svn这种集中式的版本控制系统，git是分布式版本控制系统。集中式版本控制系统，版本库是放在中央服务器的，工作的时候，用的都是自己的电脑，需要先从中央服务器获取最新代码，工作完后把自己的工作推送给中央服务器。集中式版本控制器最大的毛病就是必须联网才能操作。分布式版本控制系统没有所谓的“中央服务器”，每个人电脑上都是一个完整的版本库，工作的时候就不需要联网了。多人协作的时候，只需要把各自的修改推送给对方就可以了。分布式的安全性更高。在实际使用分布式版本控制系统的时候，很少在两人电脑上推送版本库修改，因为可能不在一个局域网内，所以也通常有一台充当中央服务器的电脑，但这个服务器仅仅是用来方便交换修改，没有大家也能工作，只是交换修改不方便。git还有强大的分制管理系统。
-
-111111
