--- a/src/20200525-v8垃圾回收-安全-浏览器.md
+++ b/src/20200525-v8垃圾回收-安全-浏览器.md
@@ -2,6 +2,7 @@
 1**Object**类型转换为布尔值都是true，null是false,Symbol为true。
 
 2**this的指向**：
+js中，this的指向是调用时决定的，而不是创建时决定的。
 - 全局执行上下文：this指向window对象，
 - 函数执行上下文：使用对象调用内部的方法，this指向对象本身
 - eval执行上下文：执行eval环境内部的上两个情况
