--- a/src/20200526-字符串比较-git-上下文-作用域-闭包.md
+++ b/src/20200526-字符串比较-git-上下文-作用域-闭包.md
@@ -19,6 +19,8 @@
 - push 提交到远程仓库
 
 ### 执行上下文相关 ###
+
+#### 上下文 ####
 执行上下文是评估和执行js代码的环境的抽象概念，当js在运行的时候，都是在执行上下文中运行。
 - **全局执行上下文**
 >基础的上下文，任何不在函数内部的代码都在全局上下文中。它会做两件事：创建一个全局window对象（浏览器中），并设置this等于这个全局对象。一个程序中只会有一个全局执行上下文。
@@ -40,3 +42,51 @@
   - 创建变量环境组件 （只存储var变量绑定）
 - 执行阶段
  >完成对所有这些变量的分配，最后执行代码
+
+#### 作用域 ####
+作用域是指代码程序中定义变量的区域。
+作用域规定了如何定义变量，也就是确定当前执行代码对变量的访问权限。
+js采用词法作用域，也就是静态作用域
+
+**词法作用域**：函数作用域在函数定义的时候就已经确定了
+**动态作用域**：函数作用域在函数调用的时候就确定
+```
+var value = 1;
+
+function foo() {
+    console.log(value);
+}
+
+function bar() {
+    var value = 2;
+    foo();
+}
+
+bar(); //1
+执行foo，先从foo内部找value，找不到根据书写位置，查找上一层，找到了value=1
+如果是动态作用域，执行foo，先从foo内部找value，没有，就从调用函数的作用域找，会找到value=2
+```
+**js采用词法作用域，函数的作用域基于函数创建的位置。js函数的执行用到了作用域链，这个作用域链是函数定义的时候创建的，不管何时何地执行函数，这种绑定都有效。**
+
+
+**变量对象**
+每一个执行上下文都会分配一个变量对象。变量对象的属性由变量和函数声明构成。在函数上下文情况下，参数列表也会被加入到变量对象中作为属性。变量对象和当前作用域息息相关。不同作用域的变量对象互不相同。它保存了当前作用域的所有函数和变量。**函数声明会被加入到变量度下行中，而函数表达式不会**
+```
+// 函数声明
+function a(){}
+console.log(typeof a); // "function"
+
+// 函数表达式
+var a = function _a(){};
+console.log(typeof a); // "function"
+console.log(typeof _a); // "undefined"
+```
+**关于Global Object**
+当js编译器开始执行的时候会初始化一个Global Object用于关联全局的作用域。对于全局环境而言，global object就是变量对象(variable object)。变量对象对于程序而言是不可读的，只有编译器才有权访问变量对象。在浏览器端，global object被具象成window对象，也就是说 global object === window === 全局环境的variable object。因此global object对于程序而言也是唯一可读的variable object。
+**活动对象**
+当函数被激活，一个新的活动对象就会被创建并分配给执行上下文。活动对象由特殊对象arguments初始化而来，随后他被当做变量对象用于变量初始化、
+
+### 闭包###
+作用域决定了这个变量的生命周期及可见性，当创建了一个函数或者{}块，就会生成一个新的作用域，通过var创建的变量只有函数作用域，通过let和const创建的变量既有函数作用域，也有块作用域。
+闭包就是内部函数，我们可以通过在一个函数内部或者 {} 块里面定义一个函数来创建闭包。
+**关于闭包引起的内存泄漏，只需在运行结束后，手动设置为null即可回收内存**
