--- a/src/20200526-字符串比较-git-上下文-作用域-闭包.md
+++ b/src/20200526-字符串比较-git-上下文-作用域-闭包.md
@@ -12,8 +12,8 @@
 
 >git有几个区。工作区（workspace），暂存区（index），本地仓库（local repository），还有远程仓库（remote repository）。远程仓库为我们保存一份代码，工作区，暂存区，和本地仓库都在本地。
 
-- merge和rebase（衍合）。区别在于merge保持了所有分支的原始修改记录，可能会包含很多不必要的信息，而rebase相当于对历史记录做出修剪，可以
-把分支整合到另一个分支办法有两种：维持一条简单清晰的提交路线。
+把分支整合到另一个分支办法有两种：
+- merge和rebase（衍合）。区别在于merge保持了所有分支的原始修改记录，可能会包含很多不必要的信息，而rebase相当于对历史记录做出修剪，可以维持一条简单清晰的提交路线。
 - add 添加到暂存区
 - commit 提交到本地仓库
 - push 提交到远程仓库
